--- a/src/pages/docs/animation.mdx
+++ b/src/pages/docs/animation.mdx
@@ -23,7 +23,7 @@ export const classes = (
       </thead>
       <tbody className="align-baseline">
         <tr>
-          <td className="p-2 border-t border-gray-300 font-mono text-xs text-purple-700 whitespace-no-wrap">
+          <td className="p-2 border-t border-gray-300 font-mono text-xs text-purple-700 whitespace-nowrap">
             .animate-none
           </td>
           <td className="p-2 border-t border-gray-300 font-mono text-xs text-blue-700 whitespace-pre">
@@ -31,7 +31,7 @@ export const classes = (
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-no-wrap">
+          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
             .animate-spin
           </td>
           <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
@@ -49,7 +49,7 @@ export const classes = (
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-no-wrap">
+          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
             .animate-ping
           </td>
           <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
@@ -69,7 +69,7 @@ export const classes = (
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-no-wrap">
+          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
             .animate-pulse
           </td>
           <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
@@ -87,7 +87,7 @@ export const classes = (
           </td>
         </tr>
         <tr>
-          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-no-wrap">
+          <td className="p-2 border-t border-gray-200 font-mono text-xs text-purple-700 whitespace-nowrap">
             .animate-bounce
           </td>
           <td className="p-2 border-t border-gray-200 font-mono text-xs text-blue-700 whitespace-pre">
