--- a/src/pages/docs/border-color.mdx
+++ b/src/pages/docs/border-color.mdx
@@ -149,7 +149,7 @@ You can [customize your color palette](/docs/colors#customizing) by editing the 
     theme: {
       borderColor: theme => ({
 -       ...theme('colors'),
-        default: theme('colors.gray.300', 'currentColor'),
+        DEFAULT: theme('colors.gray.300', 'currentColor'),
 +       'primary': '#3490dc',
 +       'secondary': '#ffed4a',
 +       'danger': '#e3342f',
