--- a/src/pages/docs/border-radius.mdx
+++ b/src/pages/docs/border-radius.mdx
@@ -130,8 +130,8 @@ By default Tailwind provides five border radius size utilities. You can change, 
       borderRadius: {
         'none': '0',
 -       'sm': '0.125rem',
--       default: '0.25rem',
-+       default: '4px',
+-       DEFAULT: '0.25rem',
++       DEFAULT: '4px',
 -       'md': '0.375rem',
 -       'lg': '0.5rem',
 -       'full': '9999px',
