--- a/src/pages/docs/border-width.mdx
+++ b/src/pages/docs/border-width.mdx
@@ -129,7 +129,7 @@ By default Tailwind provides five `border-width` utilities, and the same number 
   module.exports = {
     theme: {
       borderWidth: {
-        default: '1px',
+        DEFAULT: '1px',
         '0': '0',
         '2': '2px',
 +       '3': '3px',
