--- a/src/pages/docs/container.mdx
+++ b/src/pages/docs/container.mdx
@@ -121,10 +121,11 @@ module.exports = {
   theme: {
     container: {
       padding: {
-        default: '1rem',
+        DEFAULT: '1rem',
         sm: '2rem',
         lg: '4rem',
         xl: '5rem',
+        '2xl': '6rem',
       },
     },
   },
