--- a/src/pages/docs/divide-width.mdx
+++ b/src/pages/docs/divide-width.mdx
@@ -109,7 +109,7 @@ The divide width scale inherits its values from the `borderWidth` scale by defau
   module.exports = {
     theme: {
       borderWidth: {
-        default: '1px',
+        DEFAULT: '1px',
         '0': '0',
         '2': '2px',
 +       '3': '3px',
@@ -128,7 +128,7 @@ To customize only the divide width values, use the `theme.divideWidth` section o
   module.exports = {
     theme: {
       divideWidth: {
-        default: '1px',
+        DEFAULT: '1px',
         '0': '0',
         '2': '2px',
 +       '3': '3px',
