--- a/src/pages/docs/flex-shrink.mdx
+++ b/src/pages/docs/flex-shrink.mdx
@@ -99,8 +99,8 @@ By default Tailwind provides two `flex-shrink` utilities. You change, add, or re
     theme: {
       flexShrink: {
         '0': 0,
--       default: 1,
-+       default: 2,
+-       DEFAULT: 1,
++       DEFAULT: 2,
 +       '1': 1,
       }
     }
