--- a/src/pages/docs/font-family.mdx
+++ b/src/pages/docs/font-family.mdx
@@ -86,9 +86,9 @@ By default Tailwind provides three font family utilities: a cross-browser sans-s
   module.exports = {
     theme: {
       fontFamily: {
--       'sans': ['-apple-system', 'BlinkMacSystemFont', ...],
--       'serif': ['Georgia', 'Cambria', ...],
--       'mono': ['SFMono-Regular', 'Menlo', ...],
+-       'sans': ['ui-sans-serif', 'system-ui', ...],
+-       'serif': ['ui-serif', 'Georgia', ...],
+-       'mono': ['ui-monospace', 'SFMono-Regular', ...],
 +       'display': ['Oswald', ...],
 +       'body': ['Open Sans', ...],
       }
