--- a/src/pages/docs/release-notes.mdx
+++ b/src/pages/docs/release-notes.mdx
@@ -241,7 +241,19 @@ Learn more about the new configuration format in [the configuration documentatio
 
 Tailwind v1.0 includes a brand new numeric color palette, where each color now comes with nine shades instead of seven.
 
-<ColorPalette colors={['teal']} />
+<ColorPalette colors={[
+  ['Teal', {
+    100: '#e6fffa',
+    200: '#b2f5ea',
+    300: '#81e6d9',
+    400: '#4fd1c5',
+    500: '#38b2ac',
+    600: '#319795',
+    700: '#2c7a7b',
+    800: '#285e61',
+    900: '#234e52',
+  }]
+]} />
 
 Explore the new color palette in [the customizing colors documentation](/docs/customizing-colors#default-color-palette).
 
