--- a/src/pages/docs/responsive-design.mdx
+++ b/src/pages/docs/responsive-design.mdx
@@ -25,6 +25,9 @@ There are four breakpoints by default, inspired by common device resolutions:
 
 /* Extra Large (xl) */
 @media (min-width: 1280px) { /* ... */ }
+
+/* Extra Extra Large (2xl) */
+@media (min-width: 1536px) { /* ... */ }
 ```
 
 To add a utility but only have it take effect at a certain breakpoint, all you need to do is prefix the utility with the breakpoint name, followed by the `:` character:
