--- a/src/pages/docs/utility-first.mdx
+++ b/src/pages/docs/utility-first.mdx
@@ -180,10 +180,7 @@ This is easily solved by [extracting components](/docs/extracting-components), e
     @apply font-bold py-2 px-4 rounded;
   }
   .btn-blue {
-    @apply bg-blue-500 text-white;
-  }
-  .btn-blue:hover {
-    @apply bg-blue-700;
+    @apply bg-blue-500 text-white hover:bg-blue-700;
   }
 </style>
 ```
