--- a/src/pages/docs/flex-grow.mdx
+++ b/src/pages/docs/flex-grow.mdx
@@ -99,8 +99,8 @@ By default Tailwind provides two `flex-grow` utilities. You change, add, or remo
     theme: {
       flexGrow: {
         '0': 0,
--       default: 1,
-+       default: 2,
+-       DEFAULT: 1,
++       DEFAULT: 2,
 +       '1': 1,
       }
     }
