--- a/src/pages/docs/ring-opacity.mdx
+++ b/src/pages/docs/ring-opacity.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Box Shadow"
-description: "Utilities for controlling the box shadow of an element."
+title: "Focus Rings"
+description: "Utilities for controlling accessible focus rings an interactable element."
 features:
   responsive: true
   customizable: true
   hover: false
-  focus: false
+  focus: true
 ---
 
 import plugin from 'tailwindcss/lib/plugins/boxShadow'
